Closed
Bug 1718415
Opened 4 years ago
Closed 4 years ago
Intermittent marionette.py | application crashed [@ `anonymous namespace'::ChildImpl::ThreadInfoWrapper::GetOrCreateForCurrentThread(nsIEventTarget*)]
Categories
(Core :: DOM: Content Processes, defect)
Core
DOM: Content Processes
Tracking
()
RESOLVED
FIXED
91 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox89 | --- | unaffected |
| firefox90 | --- | unaffected |
| firefox91 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: pbone)
Details
(Keywords: crash, intermittent-failure)
Crash Data
Attachments
(1 file)
Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=343954942&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Y5vivXqkRYOGDqLR9W8qWQ/runs/0/artifacts/public/logs/live_backing.log
[task 2021-06-26T21:17:14.090Z] 21:17:14 INFO - TEST-PASS | testing/marionette/harness/marionette_harness/tests/unit/test_navigation.py TestNavigate.test_stale_element_after_remoteness_change | took 2201ms
[task 2021-06-26T21:17:14.091Z] 21:17:14 INFO - 1624742234090 Marionette DEBUG Closed connection 18
[task 2021-06-26T21:17:14.091Z] 21:17:14 INFO - mozcrash Copy/paste: C:/Users/task_1624724806/fetches\minidump_stackwalk\minidump_stackwalk.exe C:\Users\task_1624724806\AppData\Local\Temp\tmpen1d0fta.mozrunner\minidumps\9ce5bdb2-5220-42b8-94e8-26e143fe86a8.dmp C:\Users\task_1624724806\build\symbols
[task 2021-06-26T21:17:14.539Z] 21:17:14 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:14.540Z] 21:17:14 INFO - [Parent 2704, Main Thread] WARNING: IPDL resolver dropped without being called!: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:959
[task 2021-06-26T21:17:14.540Z] 21:17:14 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:14.572Z] 21:17:14 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:14.572Z] 21:17:14 INFO - [Parent 2704, Main Thread] WARNING: IPDL resolver dropped without being called!: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:959
[task 2021-06-26T21:17:14.573Z] 21:17:14 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:15.750Z] 21:17:15 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:15.751Z] 21:17:15 INFO - [Parent 2704, Main Thread] WARNING: IPDL resolver dropped without being called!: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:959
[task 2021-06-26T21:17:15.751Z] 21:17:15 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:16.961Z] 21:17:16 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:16.962Z] 21:17:16 INFO - [Parent 2704, Main Thread] WARNING: IPDL resolver dropped without being called!: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:959
[task 2021-06-26T21:17:16.962Z] 21:17:16 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:18.131Z] 21:17:18 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:18.131Z] 21:17:18 INFO - [Parent 2704, Main Thread] WARNING: IPDL resolver dropped without being called!: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:959
[task 2021-06-26T21:17:18.132Z] 21:17:18 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:19.334Z] 21:17:19 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:19.335Z] 21:17:19 INFO - [Parent 2704, Main Thread] WARNING: IPDL resolver dropped without being called!: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:959
[task 2021-06-26T21:17:19.335Z] 21:17:19 INFO - [Parent 2704, Main Thread] WARNING: Not resolving response because actor is dead.: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:931
[task 2021-06-26T21:17:20.236Z] 21:17:20 INFO - mozcrash Saved minidump as C:\Users\task_1624724806\build\blobber_upload_dir\9ce5bdb2-5220-42b8-94e8-26e143fe86a8.dmp
[task 2021-06-26T21:17:20.237Z] 21:17:20 ERROR - PROCESS-CRASH | marionette.py | application crashed [@ `anonymous namespace'::ChildImpl::ThreadInfoWrapper::GetOrCreateForCurrentThread(nsIEventTarget*)]
[task 2021-06-26T21:17:20.238Z] 21:17:20 INFO - Crash dump filename: C:\Users\task_1624724806\AppData\Local\Temp\tmpen1d0fta.mozrunner\minidumps\9ce5bdb2-5220-42b8-94e8-26e143fe86a8.dmp
[task 2021-06-26T21:17:20.238Z] 21:17:20 INFO - Operating system: Windows NT
[task 2021-06-26T21:17:20.239Z] 21:17:20 INFO - 10.0.17134
[task 2021-06-26T21:17:20.239Z] 21:17:20 INFO - CPU: amd64
[task 2021-06-26T21:17:20.239Z] 21:17:20 INFO - family 6 model 94 stepping 3
[task 2021-06-26T21:17:20.239Z] 21:17:20 INFO - 8 CPUs
[task 2021-06-26T21:17:20.239Z] 21:17:20 INFO - GPU: UNKNOWN
[task 2021-06-26T21:17:20.240Z] 21:17:20 INFO - Crash reason: EXCEPTION_BREAKPOINT
[task 2021-06-26T21:17:20.240Z] 21:17:20 INFO - Crash address: 0xcc514427
[task 2021-06-26T21:17:20.240Z] 21:17:20 INFO - Assertion: Unknown assertion type 0x00000000
[task 2021-06-26T21:17:20.240Z] 21:17:20 INFO - Process uptime: 1 seconds
[task 2021-06-26T21:17:20.241Z] 21:17:20 INFO - Thread 0 (crashed)
[task 2021-06-26T21:17:20.241Z] 21:17:20 INFO - 0 xul.dll!`anonymous namespace'::ChildImpl::ThreadInfoWrapper::GetOrCreateForCurrentThread(nsIEventTarget*) [BackgroundImpl.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 382 + 0x0]
[task 2021-06-26T21:17:20.242Z] 21:17:20 INFO - rax = 0x00007ff8d4a96227 rdx = 0x0000000000000000
[task 2021-06-26T21:17:20.242Z] 21:17:20 INFO - rcx = 0x00007ff9031e3850 rbx = 0x0000000000000000
[task 2021-06-26T21:17:20.242Z] 21:17:20 INFO - rsi = 0x00000028fe1ff270 rdi = 0x00007ff8d64d8fc8
[task 2021-06-26T21:17:20.243Z] 21:17:20 INFO - rbp = 0x0000000000000610 rsp = 0x00000028fe1fef80
[task 2021-06-26T21:17:20.243Z] 21:17:20 INFO - r8 = 0x00000028fe1fffe0 r9 = 0x0000000000000021
[task 2021-06-26T21:17:20.243Z] 21:17:20 INFO - r10 = 0x00000028fe1fff90 r11 = 0x00007ff911420000
[task 2021-06-26T21:17:20.244Z] 21:17:20 INFO - r12 = 0x0000013fe0827000 r13 = 0x0000013fe081a6b4
[task 2021-06-26T21:17:20.244Z] 21:17:20 INFO - r14 = 0x0000000000000000 r15 = 0xaaaaaaaaaaaaaaaa
[task 2021-06-26T21:17:20.244Z] 21:17:20 INFO - rip = 0x00007ff8cc514427
[task 2021-06-26T21:17:20.244Z] 21:17:20 INFO - Found by: given as instruction pointer in context
[task 2021-06-26T21:17:20.245Z] 21:17:20 INFO - 1 xul.dll!static mozilla::ipc::IdleSchedulerChild::GetMainThreadIdleScheduler() [IdleSchedulerChild.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 115 + 0x7]
[task 2021-06-26T21:17:20.245Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.245Z] 21:17:20 INFO - rsp = 0x00000028fe1fefe0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.246Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.246Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cc521fff
[task 2021-06-26T21:17:20.246Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.247Z] 21:17:20 INFO - 2 xul.dll!DOMGCSliceCallback(JSContext*, JS::GCProgress, JS::GCDescription const&) [nsJSEnvironment.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 2050 + 0x5]
[task 2021-06-26T21:17:20.247Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.247Z] 21:17:20 INFO - rsp = 0x00000028fe1ff030 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.247Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.248Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cd7b5019
[task 2021-06-26T21:17:20.248Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.248Z] 21:17:20 INFO - 3 xul.dll!js::gcstats::Statistics::endSlice() [Statistics.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 1222 + 0x1a]
[task 2021-06-26T21:17:20.248Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.249Z] 21:17:20 INFO - rsp = 0x00000028fe1ff240 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.249Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.249Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8d26fa21f
[task 2021-06-26T21:17:20.250Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.250Z] 21:17:20 INFO - 4 xul.dll!js::gc::GCRuntime::gcCycle(bool, js::SliceBudget const&, mozilla::Maybe<JS::GCOptions> const&, JS::GCReason) [GC.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 7662 + 0x8]
[task 2021-06-26T21:17:20.250Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.251Z] 21:17:20 INFO - rsp = 0x00000028fe1ff2c0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.251Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.251Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8d265d456
[task 2021-06-26T21:17:20.251Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.252Z] 21:17:20 INFO - 5 xul.dll!js::gc::GCRuntime::collect(bool, js::SliceBudget const&, mozilla::Maybe<JS::GCOptions> const&, JS::GCReason) [GC.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 7864 + 0x23]
[task 2021-06-26T21:17:20.252Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.252Z] 21:17:20 INFO - rsp = 0x00000028fe1ff3e0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.253Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.253Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8d265e55b
[task 2021-06-26T21:17:20.253Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.253Z] 21:17:20 INFO - 6 xul.dll!JS::NonIncrementalGC(JSContext*, JS::GCOptions, JS::GCReason) [GC.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 8806 + 0x36]
[task 2021-06-26T21:17:20.254Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.254Z] 21:17:20 INFO - rsp = 0x00000028fe1ff520 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.254Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.255Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8d266499b
[task 2021-06-26T21:17:20.255Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.255Z] 21:17:20 INFO - 7 xul.dll!nsCycleCollector::FixGrayBits(bool, TimeLog&) [nsCycleCollector.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 3272 + 0xb]
[task 2021-06-26T21:17:20.255Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.256Z] 21:17:20 INFO - rsp = 0x00000028fe1ff5b0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.256Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.256Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbb329db
[task 2021-06-26T21:17:20.256Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.257Z] 21:17:20 INFO - 8 xul.dll!nsCycleCollector::BeginCollection(ccType, nsICycleCollectorListener*) [nsCycleCollector.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 3578 + 0xa]
[task 2021-06-26T21:17:20.257Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.257Z] 21:17:20 INFO - rsp = 0x00000028fe1ff5f0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.257Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.258Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbb33679
[task 2021-06-26T21:17:20.258Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.258Z] 21:17:20 INFO - 9 xul.dll!nsCycleCollector::Collect(ccType, js::SliceBudget&, nsICycleCollectorListener*, bool) [nsCycleCollector.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 3407 + 0xe]
[task 2021-06-26T21:17:20.258Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.259Z] 21:17:20 INFO - rsp = 0x00000028fe1ff690 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.259Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.259Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbb330b4
[task 2021-06-26T21:17:20.259Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.260Z] 21:17:20 INFO - 10 xul.dll!nsCycleCollector::ShutdownCollect() [nsCycleCollector.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 3350 + 0x1a]
[task 2021-06-26T21:17:20.260Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.260Z] 21:17:20 INFO - rsp = 0x00000028fe1ff740 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.260Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.261Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbb32e7a
[task 2021-06-26T21:17:20.261Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.261Z] 21:17:20 INFO - 11 xul.dll!nsCycleCollector::Shutdown(bool) [nsCycleCollector.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 3644 + 0x8]
[task 2021-06-26T21:17:20.261Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.262Z] 21:17:20 INFO - rsp = 0x00000028fe1ff7e0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.262Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.262Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbb34262
[task 2021-06-26T21:17:20.262Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.263Z] 21:17:20 INFO - 12 xul.dll!nsCycleCollector_shutdown(bool) [nsCycleCollector.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 3959 + 0xa]
[task 2021-06-26T21:17:20.263Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.263Z] 21:17:20 INFO - rsp = 0x00000028fe1ff820 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.263Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.263Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbb36021
[task 2021-06-26T21:17:20.264Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.264Z] 21:17:20 INFO - 13 xul.dll!mozilla::ShutdownXPCOM(nsIServiceManager*) [XPCOMInit.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 709 + 0x7]
[task 2021-06-26T21:17:20.264Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.265Z] 21:17:20 INFO - rsp = 0x00000028fe1ff880 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.265Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.265Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cbc93ff2
[task 2021-06-26T21:17:20.265Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.266Z] 21:17:20 INFO - 14 xul.dll!XRE_TermEmbedding() [nsEmbedFunctions.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 215 + 0x7]
[task 2021-06-26T21:17:20.266Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.266Z] 21:17:20 INFO - rsp = 0x00000028fe1ff970 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.266Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.266Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8d1e5155a
[task 2021-06-26T21:17:20.267Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.267Z] 21:17:20 INFO - 15 xul.dll!mozilla::ipc::ScopedXREEmbed::Stop() [ScopedXREEmbed.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 90 + 0x8]
[task 2021-06-26T21:17:20.267Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.267Z] 21:17:20 INFO - rsp = 0x00000028fe1ff9b0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.268Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.268Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8cc545f82
[task 2021-06-26T21:17:20.268Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.268Z] 21:17:20 INFO - 16 xul.dll!XRE_InitChildProcess(int, char**, XREChildData const*) [nsEmbedFunctions.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 746 + 0x10]
[task 2021-06-26T21:17:20.268Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.269Z] 21:17:20 INFO - rsp = 0x00000028fe1ff9e0 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.269Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.269Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff8d1e51fb7
[task 2021-06-26T21:17:20.269Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.270Z] 21:17:20 INFO - 17 firefox.exe!NS_internal_main(int, char**, char**) [nsBrowserApp.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 327 + 0xa4]
[task 2021-06-26T21:17:20.270Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.270Z] 21:17:20 INFO - rsp = 0x00000028fe1ffc80 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.270Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.270Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff6bd7716ae
[task 2021-06-26T21:17:20.271Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.271Z] 21:17:20 INFO - 18 firefox.exe!wmain(int, wchar_t**) [nsWindowsWMain.cpp:3f9e98489ae52f5dfc8549d8595910e13ae65c52 : 131 + 0x15]
[task 2021-06-26T21:17:20.271Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.271Z] 21:17:20 INFO - rsp = 0x00000028fe1ffe60 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.272Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.272Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff6bd77121b
[task 2021-06-26T21:17:20.272Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.272Z] 21:17:20 INFO - 19 firefox.exe!__scrt_common_main_seh() [exe_common.inl : 288 + 0x22]
[task 2021-06-26T21:17:20.272Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.273Z] 21:17:20 INFO - rsp = 0x00000028fe1fff20 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.273Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.273Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff6bd80fb48
[task 2021-06-26T21:17:20.273Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.273Z] 21:17:20 INFO - 20 kernel32.dll!BaseThreadInitThunk + 0x14
[task 2021-06-26T21:17:20.274Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.274Z] 21:17:20 INFO - rsp = 0x00000028fe1fff60 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.274Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.274Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff911173034
[task 2021-06-26T21:17:20.274Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.275Z] 21:17:20 INFO - 21 ntdll.dll!SdbpCheckMatchingFiles + 0x81
[task 2021-06-26T21:17:20.275Z] 21:17:20 INFO - rbx = 0x0000000000000000 rbp = 0x0000000000000610
[task 2021-06-26T21:17:20.275Z] 21:17:20 INFO - rsp = 0x00000028fe1fff90 r12 = 0x0000013fe0827000
[task 2021-06-26T21:17:20.275Z] 21:17:20 INFO - r13 = 0x0000013fe081a6b4 r14 = 0x0000000000000000
[task 2021-06-26T21:17:20.276Z] 21:17:20 INFO - r15 = 0xaaaaaaaaaaaaaaaa rip = 0x00007ff911491461
[task 2021-06-26T21:17:20.276Z] 21:17:20 INFO - Found by: call frame info
[task 2021-06-26T21:17:20.276Z] 21:17:20 INFO - 22 KERNELBASE.dll!AslHashFree + 0x76f5c
[task 2021-06-26T21:17:20.276Z] 21:17:20 INFO - rsp = 0x00000028fe1fffc0 rip = 0x00007ff90db6bf10
[task 2021-06-26T21:17:20.277Z] 21:17:20 INFO - Found by: stack scanning
| Comment hidden (Intermittent Failures Robot) |
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Component: Marionette → IPC
Product: Testing → Core
Comment 3•4 years ago
|
||
MOZ_ASSERT(mThreadLocalIndex != kBadThreadLocalIndex,
"BackgroundChild::Startup() was never called!");
But from the stack, the problem seems to be that it was called too late in shutdown.
The reason it's being called looks GC-related. mccr8, any ideas?
Flags: needinfo?(continuation)
Comment 4•4 years ago
|
||
pbone has looked at GetMainThreadIdleScheduler recently
Component: IPC → DOM: Content Processes
Flags: needinfo?(continuation) → needinfo?(pbone)
| Assignee | ||
Updated•4 years ago
|
Assignee: nobody → pbone
Status: NEW → ASSIGNED
Flags: needinfo?(pbone)
| Assignee | ||
Comment 5•4 years ago
|
||
If GetMainThreadIdleScheduler is called after IPC is destroyed it can
attempt to start it as if it's the first use, which crashes. Instead check
if we've already destroyed the scheduler once and if so then return early.
Pushed by pbone@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/bff0651f9d33
GetMainThreadIdleScheduler checks if scheduler is destroyed r=smaug
Comment 7•4 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox91:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
Updated•4 years ago
|
status-firefox89:
--- → unaffected
status-firefox90:
--- → unaffected
status-firefox-esr78:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•